fixed white links not showing up on admin/readers page

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -73,7 +73,7 @@ dl dd {
     cursor: pointer;
 }
 
-dl dd a:link, a:visited, a:hover, a:active {
+dl dd a:link a:visited a:hover a:active {
   text-decoration: none;
   color: white;
 }
@@ -84,6 +84,11 @@ dd:hover {
 
 dd a:visited {
   color: blue;
+}
+
+.indicators a:link{
+  text-decoration: none;
+  color: white;
 }
 
 textarea#comments {
